src/objects/GalaxyReconciliationBatch__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The Reconciliation jobs are run in a sequence. The finish method of the first job will schedule the next job. Since the job will still remain active in the system, we will see the error message about scheduling a job that is already existing. We will use this  field to delete the job as soon as we’re done executing that step in the process.</description>
    <fields>
        <fullName>Apex_Jobs_Run_Date__c</fullName>
        <description>The Date when all APEX jobs finished executing ...</description>
        <label>Apex Jobs Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cast_Iron_Jobs_Run_Date__c</fullName>
        <description>Date when Cast Iron finished its data load ...</description>
        <label>Cast Iron Jobs Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomRunDate__c</fullName>
        <defaultValue>Null</defaultValue>
        <label>Custom Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule2_ID__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Schedule2 ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule3B_ID__c</fullName>
        <label>Schedule3B ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule3_ID__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Schedule3 ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule4_ID__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Schedule4 ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GalaxyReconciliationBatch</label>
</CustomObject>